# DestinyAPI

./: README.MD  setup.cfg
.github/workflows/: upload_to_pypi.yml
src/Destiny/: app.py
