[metadata]
name = Destiny-API-FFCoder
version = 1.0
author = Jonathon Chambers
author_email = me@jonathonchambers.com
description = A WIP Destiny Library Systems API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FFCoder/DestinyAPI
project_urls =
    Bug Tracker = https://github.com/FFCoder/DestinyAPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src